--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trinity/framework",
+  "name": "trinity",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,5 +18,8 @@
   },
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
