--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mathiassoto/trinity",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist",
   "repository": "https://github.com/MathiasSoto/trinity.git",
   "scripts": {
     "build": "npx tsup --dts"
